// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonLayout should create layout through createJsonLayout function 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": undefined,
        "fontSize": 16,
        "fontWeight": "400",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  This component is generated through JsonLayout Component
</Text>
`;

exports[`JsonLayout should render a null for unknown component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    🚨 BlueBase Error
  </Text>
  <Text>
    Could not parse React JSON Schema. Reason: Could not resolve component.
  </Text>
</View>
`;

exports[`JsonLayout should render a text component with red color 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": undefined,
        "fontSize": 16,
        "fontWeight": "400",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  This component is generated through JsonLayout Component
</Text>
`;

exports[`JsonLayout should render a text component with red color that is processed by filters 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": undefined,
        "fontSize": 16,
        "fontWeight": "400",
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  Content changed by filter!
</Text>
`;
